--- a/src/part4_appendix.tex
+++ b/src/part4_appendix.tex
@@ -15,9 +15,15 @@
 
 %% ========= Appendix ==========
 \chapter{Name of the 1st appendix}
-\lipsum[1]
+\thispagestyle{abstractAppendix} % it is nessesary to put this line after each appendix chapter, so that, the page style will not be "plain"
+
+
+\lipsum
 
 
 
 \chapter{Name of the 2nd appendix}
+\thispagestyle{abstractAppendix} % it is nessesary to put this line after each appendix chapter, so that, the page style will not be "plain"
+
+
 \lipsum[1]
