add "enumitem" package

--- a/LatexTemplate_main.tex
+++ b/LatexTemplate_main.tex
@@ -46,10 +46,10 @@
 
 % usefull package
 \usepackage{lipsum} % lorem ipsum with "\lipsum[1-nParagraph]" command
-\usepackage{comment} % To do comment on several lines with "\be­gin{com­ment} ... \end{com­ment}"
+\usepackage{comment} % To do comment on several lines with "\begin{comment} ... \end{comment}"
 \usepackage{titling} % use \thetitle, \theauthor and \thedate
 \usepackage{algorithmic} % easily write pseudo code. see: http://tug.ctan.org/macros/latex/contrib/algorithmicx/algorithmicx.pdf
-
+\usepackage{enumitem} % personalised "bullet" list (use \begin{itemize}[label=\SymbToUse] )
 
 
 % ========== Documents informations =========
