custom bullet style for lists

--- a/LatexTemplate_main.tex
+++ b/LatexTemplate_main.tex
@@ -154,7 +154,12 @@
 
 
 
-
+%% ========== Lists ==========
+% custom bullet style for lists:
+\renewcommand{\labelitemi}{$-$}
+\renewcommand{\labelitemii}{$\bullet$}
+\renewcommand{\labelitemiii}{$\circ$}
+%\renewcommand{\labelitemiv}{$\circ$}
 
 
 
