add blank page after title page

--- a/src/_titlePage.tex
+++ b/src/_titlePage.tex
@@ -70,5 +70,9 @@
   
 
 \end{titlepage}
-
+%% add blank page ( for printed documents )
+\null
+\thispagestyle{empty}%
+\addtocounter{page}{-1}%
+\clearpage
 
